--- a/K8S/platforms-depl.yaml
+++ b/K8S/platforms-depl.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Deployment
 metadata:
   name: platforms-depl
@@ -15,3 +15,18 @@ spec:
       containers:
         - name: platformservice
           image: aumprakashdehury/platformservice:latest
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: platforms-clusterip-srv
+spec:
+  type: ClusterIP
+  selector:
+    app: platformservice
+  ports:
+    - port: 80
+      name: platformservice
+      protocol: TCP
+      targetPort: 80
+  
