--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -6,5 +6,8 @@
             "Microsoft": "Information"
         }
     },
-    "CommandService": "https://commands-clusterip-srv:80/api/c/Platforms"
+    "CommandService": "https://commands-clusterip-srv:80/api/c/Platforms",
+    "ConnectionStrings": {
+        "PlatformsConnection": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User Id=sa;Password=pa55w0rd;"
+    }
 }
