Command service controller and readme file added.

--- a/CommandsService/appsettings.Development.json
+++ b/CommandsService/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DbConnectionString": "Server=localhost,1433;Database=CommandDB;User=SA;Password=MSsqlSA123;TrustServerCertificate=true;MultipleActiveResultSets=true;"
   }
 }
