--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService": "https://localhost:6001/api/c/Platforms"
+  "CommandService": "https://localhost:6001/api/c/Platforms",
+  "ConnectionStrings": {
+    "DbConnectionString": "Server=localhost,1433;Database=PlatformDB;User=SA;Password=MSsqlSA123;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+  }
 }
