Async message bus added.

--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -8,5 +8,7 @@
   "CommandService": "https://localhost:6001/api/c/Platforms",
   "ConnectionStrings": {
     "DbConnectionString": "Server=localhost,1433;Database=PlatformDB;User=SA;Password=MSsqlSA123;TrustServerCertificate=true;MultipleActiveResultSets=true;"
-  }
+  },
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort": "5672"
 }
