--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -9,5 +9,7 @@
     "CommandService": "https://commands-clusterip-srv:80/api/c/Platforms",
     "ConnectionStrings": {
         "PlatformsConnection": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User Id=sa;Password=pa55w0rd;"
-    }
+    },
+    "RabbitMQHost": "rabbitmq-clusterip-srv",
+    "RabbitMQPort": "5672"
 }
